--- a/Workspace/MGHWayFinder/AndroidManifest.xml
+++ b/Workspace/MGHWayFinder/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".MGHWayFinderActivity"
             android:label="@string/app_name" >
