new maps. new name. new colors. start labels remove for breaking everything.

--- a/Workspace/MGHWayFinder/AndroidManifest.xml
+++ b/Workspace/MGHWayFinder/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@android:style/Theme.NoTitleBar">
         <activity
             android:name=".MGHWayFinderActivity"
-            android:label="@string/app_name" >
+            android:label="Delfin" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
